--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1182,6 +1182,32 @@ body{
     padding-top: 5%;
 }
 
+
+@media(min-width: 724px) and (max-width: 1216px){
+    .SOLUCOESINTELIGENTES{ /* DIV DE ALINHAMENTO E INCLUSÃO DA ELO E AREA DE MEMBROS*/
+        background-color: #fffdfd;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        margin: 0 auto;
+        flex-wrap: wrap;
+        padding-bottom: 60px;
+    }
+    
+    .BOXGRID2{ /*BOX CINZA DE FUNDO*/
+    background: radial-gradient(
+    closest-side,
+    rgba(255, 255, 255, 0.04),
+    rgba(59, 60, 66, 0.04)
+    );
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+}
+
+
+
+
 @media(max-width:723px){
 
     .SOLUCOESINTELIGENTES{ /* DIV DE ALINHAMENTO E INCLUSÃO DA ELO E AREA DE MEMBROS*/
@@ -1224,7 +1250,7 @@ body{
     rgba(59, 60, 66, 0.04)
     );
     border-radius: 20px;
-    margin-bottom: 5%;
+    margin-bottom: 10px;
 }
 
 .ELOINOVACAO{ /*ELO*/
@@ -2006,12 +2032,18 @@ body{
 
 @media (min-width: 1217px) and (max-width: 1419px){
 
-    
+    .NOSSOSSERVIÇOA{ /*BACKGROUND DA SECTION*/
+    background-color: #fffdfd;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 5%;
+}
+
     .NossaConsultoria{ /*ALINHAMETNO DA DIV DE TEXTO*/
     width: 100%;
     margin: -40px auto;
     justify-items: center;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 .Textonossaconsultoria{ /*FONTE E COR DO TEXTO*/
@@ -2071,8 +2103,8 @@ body{
     );
     border-radius: 20px;
     margin-bottom: 0%;
-    width: 370px;
-    height: auto;
+    width: 450px;
+    height: 692px;
     margin-top: 40px;
     justify-content: center;
     align-content: center;
@@ -2110,6 +2142,8 @@ body{
 
 
 @media (min-width: 724px) and (max-width: 1216px){
+
+    
 
     .NossaConsultoria{ /*ALINHAMETNO DA DIV DE TEXTO*/
     width: 100%;
@@ -2151,8 +2185,8 @@ body{
     border-radius: 20px;
     margin-bottom: 0%;
     width: 594px;
-    height: 632px;
-    margin-top: 40px;
+    height: 602px;
+    margin-top: -40px;
     justify-content: center;
   }
 
@@ -2207,7 +2241,7 @@ body{
     margin-bottom: 5%;
     width: 594px;
     height: auto;
-    margin-top: 40px;
+    margin-top: -40px;
     justify-content: center;
     align-content: center;
   }
@@ -2264,7 +2298,7 @@ body{
   }
 
   .BOXESC1{ /*BACKGROUND BOXE 1*/
-    margin-top: 40px;
+    margin-top: 20px;
     background: radial-gradient(
     closest-side,
     rgba(255, 255, 255, 0.04),
@@ -2315,7 +2349,7 @@ body{
     margin-bottom: 5%;
     width: 370px;
     height: auto;
-    margin-top: 40px;
+    margin-top: 20px;
     justify-content: center;
     align-content: center;
   }
