Revert "pronto e responsivo 90%"
This reverts commit a0dd46ffd3c007bc7d2405927de1f84781ae1f0a.

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1262,32 +1262,6 @@ body{
     padding-top: 5%;
 }
 
-
-@media(min-width: 724px) and (max-width: 1216px){
-    .SOLUCOESINTELIGENTES{ /* DIV DE ALINHAMENTO E INCLUSÃO DA ELO E AREA DE MEMBROS*/
-        background-color: #fffdfd;
-        width: 100%;
-        height: auto;
-        justify-content: center;
-        margin: 0 auto;
-        flex-wrap: wrap;
-        padding-bottom: 60px;
-    }
-    
-    .BOXGRID2{ /*BOX CINZA DE FUNDO*/
-    background: radial-gradient(
-    closest-side,
-    rgba(255, 255, 255, 0.04),
-    rgba(59, 60, 66, 0.04)
-    );
-    border-radius: 20px;
-    margin-bottom: 10px;
-}
-}
-
-
-
-
 @media(max-width:723px){
 
     .SOLUCOESINTELIGENTES{ /* DIV DE ALINHAMENTO E INCLUSÃO DA ELO E AREA DE MEMBROS*/
@@ -1330,7 +1304,7 @@ body{
     rgba(59, 60, 66, 0.04)
     );
     border-radius: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
 }
 
 .ELOINOVACAO{ /*ELO*/
@@ -2122,18 +2096,12 @@ body{
 
 @media (min-width: 1217px) and (max-width: 1419px){
 
-    .NOSSOSSERVIÇOA{ /*BACKGROUND DA SECTION*/
-    background-color: #fffdfd;
-    justify-content: center;
-    padding-top: 100px;
-    padding-bottom: 5%;
-}
-
+    
     .NossaConsultoria{ /*ALINHAMETNO DA DIV DE TEXTO*/
     width: 100%;
     margin: -40px auto;
     justify-items: center;
-    padding-top: 50px;
+    padding-top: 100px;
 }
 
 .Textonossaconsultoria{ /*FONTE E COR DO TEXTO*/
@@ -2193,8 +2161,8 @@ body{
     );
     border-radius: 20px;
     margin-bottom: 0%;
-    width: 450px;
-    height: 692px;
+    width: 370px;
+    height: auto;
     margin-top: 40px;
     justify-content: center;
     align-content: center;
@@ -2232,8 +2200,6 @@ body{
 
 
 @media (min-width: 724px) and (max-width: 1216px){
-
-    
 
     .NossaConsultoria{ /*ALINHAMETNO DA DIV DE TEXTO*/
     width: 100%;
@@ -2275,8 +2241,8 @@ body{
     border-radius: 20px;
     margin-bottom: 0%;
     width: 594px;
-    height: 602px;
-    margin-top: -40px;
+    height: 632px;
+    margin-top: 40px;
     justify-content: center;
   }
 
@@ -2331,7 +2297,7 @@ body{
     margin-bottom: 5%;
     width: 594px;
     height: auto;
-    margin-top: -40px;
+    margin-top: 40px;
     justify-content: center;
     align-content: center;
   }
@@ -2388,7 +2354,7 @@ body{
   }
 
   .BOXESC1{ /*BACKGROUND BOXE 1*/
-    margin-top: 20px;
+    margin-top: 40px;
     background: radial-gradient(
     closest-side,
     rgba(255, 255, 255, 0.04),
@@ -2439,7 +2405,7 @@ body{
     margin-bottom: 5%;
     width: 370px;
     height: auto;
-    margin-top: 20px;
+    margin-top: 40px;
     justify-content: center;
     align-content: center;
   }
